Fix spacing in navbar

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -53,6 +53,7 @@ nav:after {
 	display: block;
 	width: 100%;
 	height: 100%;
+	padding: 0 10px;
 
 	background-color: #192136;
 	color: #fff;
@@ -61,8 +62,6 @@ nav:after {
 .navbar-brand {
 	display: block;
 	float: left;
-	margin-left: 5px;
-	margin-right: 10px;
 
 	line-height: 40px;
 	font-size: 20px;
@@ -78,9 +77,11 @@ nav:after {
 }
 
 .navbar-links {
-	list-style-type: none;
+	float: left;
 	margin: 0;
+	margin-left: 10px;
 	padding: 0;
+	list-style-type: none;
 }
 
 .navbar-links li {
@@ -100,7 +101,6 @@ nav:after {
 	float: right;
 	line-height: 20px;
 	height: 40px;
-	margin-right: 5px;
 
 	text-align: right;
 	font-size: 14px;
